force-app/main/default/objects/Insolvency_Payment__c/Insolvency_Payment__c.object-meta.xml
<CustomObject>
    <description>This custom object represents individual payments made on individual accounts in the insolvency filing.</description>
    <label>Insolvency Payment</label>
    <nameField>
        <displayFormat>IP-{00000}</displayFormat>
        <label>Insolvency Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insolvency Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>