force-app/main/default/objects/Insolvency_Payment__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>The Insolvency Account’s account number this payment belongs to</description>
    <formula>Insolvency_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Insolvency Account’s account number this payment belongs to</inlineHelpText>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>