force-app/main/default/objects/Insolvency_Payment__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <description>Bank Name</description>
    <formula>Insolvency_Account__r.Bank_Name__c</formula>
    <inlineHelpText>Bank Name</inlineHelpText>
    <label>Bank Name</label>
    <type>Text</type>
</CustomField>