force-app/main/default/objects/Insolvency_Payment__c/fields/Client_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Client_Identifier__c</fullName>
    <description>Used to segregate data across clients.  Only the external client noted in this field can see this record.</description>
    <inlineHelpText>Used to segregate data across clients.  Only the external client noted in this field can see this record.</inlineHelpText>
    <label>Client Identifier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scotia Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>