force-app/main/default/objects/Insolvency_Payment__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>Comment</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Comment</inlineHelpText>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>