force-app/main/default/objects/Insolvency_Payment__c/fields/Created_by_EFT_Processing__c.field-meta.xml
<CustomField>
    <fullName>Created_by_EFT_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>set to true when records are created from EFT processing</description>
    <inlineHelpText>set to true when records are created from EFT processing</inlineHelpText>
    <label>Created by EFT Processing</label>
    <type>Checkbox</type>
</CustomField>