force-app/main/default/objects/Insolvency_Payment__c/fields/CTB_Update_File_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>CTB_Update_File_Timestamp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CTB Update File Timestamp</label>
    <type>DateTime</type>
</CustomField>