force-app/main/default/objects/Insolvency_Payment__c/fields/CTB_Update_Filename__c.field-meta.xml
<CustomField>
    <fullName>CTB_Update_Filename__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CTB Update Filename</label>
    <length>200</length>
    <type>Text</type>
</CustomField>