force-app/main/default/objects/Insolvency_Payment__c/fields/Debtor_Name__c.field-meta.xml
<CustomField>
    <fullName>Debtor_Name__c</fullName>
    <formula>Insolvency_Account__r.Debtor__c</formula>
    <label>Debtor Name</label>
    <type>Text</type>
</CustomField>