force-app/main/default/objects/Insolvency_Payment__c/fields/Deposit_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Account_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Deposit Account Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>