force-app/main/default/objects/Insolvency_Payment__c/fields/Deposit_Slip__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Slip__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deposit Slip</label>
    <referenceTo>Deposit_Slip__c</referenceTo>
    <relationshipLabel>Insolvency Payments</relationshipLabel>
    <relationshipName>Insolvency_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>