force-app/main/default/objects/Insolvency_Payment__c/fields/Deposite_Date__c.field-meta.xml
<CustomField>
    <fullName>Deposite_Date__c</fullName>
    <description>Deposite Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Deposite Date</inlineHelpText>
    <label>Deposite Date</label>
    <type>Date</type>
</CustomField>