force-app/main/default/objects/Insolvency_Payment__c/fields/EFT_Files__c.field-meta.xml
<CustomField>
    <fullName>EFT_Files__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to EFT Record</description>
    <label>EFT Files</label>
    <referenceTo>EFT_Files__c</referenceTo>
    <relationshipLabel>Insolvency Payments</relationshipLabel>
    <relationshipName>Insolvency_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>