force-app/main/default/objects/Insolvency_Payment__c/fields/Estate_Number__c.field-meta.xml
<CustomField>
    <fullName>Estate_Number__c</fullName>
    <formula>Insolvency_Account__r.Insolvency__r.Name</formula>
    <label>Estate Number</label>
    <type>Text</type>
</CustomField>