force-app/main/default/objects/Insolvency_Payment__c/fields/External_Correlation_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Correlation_ID__c</fullName>
    <description>This field is an immutable Id which allows record synchronization with external systems.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>External Correlation ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>