force-app/main/default/objects/Insolvency_Payment__c/fields/Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fee_Amount__c</fullName>
    <description>calculate fee amount based on payment amount and insolvency type</description>
    <formula>IF((Bank_Name__c == &apos;Scotia Bank&apos; || Bank_Name__c == &apos;Fairstone&apos;) &amp;&amp; (ISPICKVAL(Insolvency_Account__r.Insolvency_Type__c, &apos;Division 1 Proposal&apos;) || ISPICKVAL(Insolvency_Account__r.Insolvency_Type__c, &apos;Consumer Proposal&apos;)),  Payment_Amount__c * 0.02, 

IF((Bank_Name__c == &apos;Scotia Bank&apos; || Bank_Name__c == &apos;Fairstone&apos; || Bank_Name__c == &apos;Easyfinancial&apos;) &amp;&amp; ISPICKVAL(Insolvency_Account__r.Insolvency_Type__c, &apos;Bankruptcy&apos;),  Payment_Amount__c * 0.04, 

IF(Bank_Name__c == &apos;Easyfinancial&apos; &amp;&amp; ISPICKVAL(Insolvency_Account__r.Insolvency_Type__c, &apos;Division 1 Proposal&apos;),  Payment_Amount__c * 0.02,

IF(Bank_Name__c == &apos;Easyfinancial&apos; &amp;&amp; ISPICKVAL(Insolvency_Account__r.Insolvency_Type__c, &apos;Consumer Proposal&apos;),  Payment_Amount__c * 0.025,

IF(Bank_Name__c == &apos;Canadian Tire&apos; &amp;&amp; ISPICKVAL(Insolvency_Account__r.Insolvency_Type__c, &apos;Consumer Proposal&apos;),  Payment_Amount__c * 0.03,

IF(Bank_Name__c == &apos;Canadian Tire&apos; &amp;&amp; ISPICKVAL(Insolvency_Account__r.Insolvency_Type__c, &apos;Bankruptcy&apos;),  Payment_Amount__c * 0.08,

0))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>