force-app/main/default/objects/Insolvency_Payment__c/fields/Insolvency_Account__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Account__c</fullName>
    <description>A reference to the Insolvency Account this payment belongs to.</description>
    <inlineHelpText>A reference to the Insolvency Account this payment belongs to.</inlineHelpText>
    <label>Insolvency Account</label>
    <referenceTo>Insolvency_Account__c</referenceTo>
    <relationshipLabel>Insolvency Payments</relationshipLabel>
    <relationshipName>Insolvency_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>