force-app/main/default/objects/Insolvency_Payment__c/fields/Insolvency_Payment_Name_Original__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Payment_Name_Original__c</fullName>
    <description>This field gets the value from Insolvency Payment Name (Auto Number) field only on record insert. This is used to retain the first generated Auto Number value even after Unarchival.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Insolvency Payment Name Original</label>
    <length>20</length>
    <type>Text</type>
</CustomField>