force-app/main/default/objects/Insolvency_Payment__c/fields/Is_Payment_Remitted__c.field-meta.xml
<CustomField>
    <fullName>Is_Payment_Remitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Payment Remitted</label>
    <type>Checkbox</type>
</CustomField>