force-app/main/default/objects/Insolvency_Payment__c/fields/Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount__c</fullName>
    <description>The amount to be applied to the Insolvency Account.</description>
    <inlineHelpText>The amount to be applied to the Insolvency Account.</inlineHelpText>
    <label>Payment Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>