force-app/main/default/objects/Insolvency_Payment__c/fields/Payment_Created__c.field-meta.xml
<CustomField>
    <fullName>Payment_Created__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Payment Created</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Payment Created</inlineHelpText>
    <label>Payment Created</label>
    <type>Date</type>
</CustomField>