force-app/main/default/objects/Insolvency_Payment__c/fields/Payment_Posting_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Posting_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>The date that the payment is posted to the Insolvency Account.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date that the payment is posted to the Insolvency Account.</inlineHelpText>
    <label>Payment Posting Date</label>
    <type>Date</type>
</CustomField>