force-app/main/default/objects/Insolvency_Payment__c/fields/Payment_Posting_Month__c.field-meta.xml
<CustomField>
    <fullName>Payment_Posting_Month__c</fullName>
    <defaultValue>TEXT( YEAR(TODAY())) + IF(MONTH( TODAY())&gt;9, TEXT(MONTH( TODAY() ) ), &apos;0&apos;+TEXT(MONTH( TODAY() ) ))</defaultValue>
    <description>Payment Posting Month</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Payment Posting Month</inlineHelpText>
    <label>Payment Posting Month</label>
    <length>20</length>
    <type>Text</type>
</CustomField>