force-app/main/default/objects/Insolvency_Payment__c/fields/Payment_Reporting_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reporting_Date__c</fullName>
    <description>Field to use for reporting purpose</description>
    <formula>IF( NOT(ISNULL(Insolvency_Account__r.Purchase_Date__c)),
IF(Insolvency_Account__r.Purchase_Date__c &gt; Payment_Created__c ,
Insolvency_Account__r.Purchase_Date__c, Payment_Created__c ), Payment_Created__c )</formula>
    <inlineHelpText>Field to use for reporting purpose</inlineHelpText>
    <label>Payment Reporting Date</label>
    <type>Date</type>
</CustomField>