force-app/main/default/objects/Insolvency_Payment__c/fields/Payment_Reversal_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reversal_Date__c</fullName>
    <description>Payment Reversal Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Payment Reversal Date</inlineHelpText>
    <label>Payment Reversal Date</label>
    <type>Date</type>
</CustomField>