force-app/main/default/objects/Insolvency_Payment__c/fields/Payment_Reversed__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reversed__c</fullName>
    <label>Payment Reversed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Stopped</fullName>
            </value>
            <value>
                <fullName>Unauthorised</fullName>
            </value>
            <value>
                <fullName>Stale Dated</fullName>
            </value>
            <value>
                <fullName>NSF</fullName>
            </value>
            <value>
                <fullName>Payment posted to Incorrect account</fullName>
            </value>
            <value>
                <fullName>Payment Refunded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>