force-app/main/default/objects/Insolvency_Payment__c/fields/Payment_Source__c.field-meta.xml
<CustomField>
    <fullName>Payment_Source__c</fullName>
    <description>Payment Source</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Payment Source</inlineHelpText>
    <label>Payment Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>