force-app/main/default/objects/Insolvency_Payment__c/fields/Payment_Source_Formula__c.field-meta.xml
<CustomField>
    <fullName>Payment_Source_Formula__c</fullName>
    <description>Payment values against payment source number value</description>
    <formula>CASE( Payment_Source__c ,
&apos;1&apos;, &apos;In-House Payment&apos; ,
&apos;2&apos; ,&apos;Agency Payment&apos;,
&apos;3&apos;, &apos;Monthly Seller Direct Payment&apos;,
&apos;4&apos;, &apos;Weekly D+H Direct Payment&apos;,
null)</formula>
    <inlineHelpText>Payment values against payment source number value</inlineHelpText>
    <label>Payment Source</label>
    <type>Text</type>
</CustomField>