force-app/main/default/objects/Insolvency_Payment__c/fields/Payment_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Sub_Status__c</fullName>
    <label>Processing Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending File</fullName>
                <default>true</default>
                <label>Pending File</label>
            </value>
            <value>
                <fullName>File Error Parsing Record</fullName>
            </value>
            <value>
                <fullName>Sent on File</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>