force-app/main/default/objects/Insolvency_Payment__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <description>Payment Type</description>
    <inlineHelpText>Payment Type</inlineHelpText>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>1000</fullName>
            </value>
            <value>
                <fullName>1003</fullName>
            </value>
            <value>
                <fullName>1001</fullName>
            </value>
            <value>
                <fullName>3000</fullName>
            </value>
            <value>
                <fullName>1002</fullName>
            </value>
            <value>
                <fullName>7000</fullName>
            </value>
            <value>
                <fullName>4003</fullName>
            </value>
            <value>
                <fullName>3400</fullName>
            </value>
            <value>
                <fullName>4000</fullName>
            </value>
            <value>
                <fullName>5000</fullName>
            </value>
            <value>
                <fullName>7001</fullName>
            </value>
            <value>
                <fullName>4002</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>