force-app/main/default/objects/Insolvency_Payment__c/fields/Remittance__c.field-meta.xml
<CustomField>
    <fullName>Remittance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Remittance Record Reference</description>
    <inlineHelpText>Remittance Record Reference</inlineHelpText>
    <label>Dividends</label>
    <referenceTo>Remittance__c</referenceTo>
    <relationshipLabel>Insolvency Payments</relationshipLabel>
    <relationshipName>Insolvency_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>