force-app/main/default/objects/Insolvency_Payment__c/fields/Remittance_Processed__c.field-meta.xml
<CustomField>
    <fullName>Remittance_Processed__c</fullName>
    <description>Remittance Processed</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Remittance Processed</inlineHelpText>
    <label>Remittance Processed</label>
    <type>Date</type>
</CustomField>