force-app/main/default/objects/Insolvency_Payment__c/fields/Remittance_Reference__c.field-meta.xml
<CustomField>
    <fullName>Remittance_Reference__c</fullName>
    <description>Remittance Reference</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Remittance Reference</inlineHelpText>
    <label>Remittance Reference</label>
    <length>25</length>
    <type>Text</type>
</CustomField>