force-app/main/default/objects/Insolvency_Payment__c/fields/Remitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Remitted_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remitted Date</label>
    <type>Date</type>
</CustomField>