force-app/main/default/objects/Insolvency_Payment__c/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <description>Transaction Id</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Transaction Id</inlineHelpText>
    <label>Transaction Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>