force-app/main/default/objects/Insolvency_Payment__c/fields/Trustee_Name__c.field-meta.xml
<CustomField>
    <fullName>Trustee_Name__c</fullName>
    <formula>Insolvency_Account__r.Trustee_Company__c + &apos; - CHEQUE: &apos; +  Cheque_Payment_Reference_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trustee Name</label>
    <type>Text</type>
</CustomField>