force-app/main/default/objects/Insolvency_Payment__c/fields/Unallocated_Payment__c.field-meta.xml
<CustomField>
    <fullName>Unallocated_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to Unallocated payment record</description>
    <inlineHelpText>Lookup field to Unallocated payment record</inlineHelpText>
    <label>Unallocated Payment</label>
    <referenceTo>Unallocated_Payment__c</referenceTo>
    <relationshipLabel>Insolvency Payments</relationshipLabel>
    <relationshipName>Insolvency_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>