force-app/main/default/objects/Insolvency_Payment__c/recordTypes/Insolvency_Payment.recordType-meta.xml
<RecordType>
    <fullName>Insolvency_Payment</fullName>
    <active>true</active>
    <description>Insolvency Payment</description>
    <label>Insolvency Payment</label>
</RecordType>