force-app/main/default/objects/Insolvency_Payment__c/recordTypes/Remittance.recordType-meta.xml
<RecordType>
    <fullName>Remittance</fullName>
    <active>true</active>
    <description>Remittance Insolvency Payments</description>
    <label>Remittance</label>
</RecordType>