force-app/main/default/objects/Insolvency_Payment__c/validationRules/Payment_Reversed.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Reversed</fullName>
    <active>false</active>
    <description>Once Payment is Reversed do not allow payment to be updated</description>
    <errorConditionFormula>OR(AND(
ISCHANGED( Payment_Reversed__c ),
OR(
ISPICKVAL(PRIORVALUE(Payment_Reversed__c) , &quot;NSF&quot;),
ISPICKVAL(PRIORVALUE(Payment_Reversed__c) , &quot;Stopped&quot;),
ISPICKVAL(PRIORVALUE(Payment_Reversed__c) , &quot;Unauthorised&quot;),
ISPICKVAL(PRIORVALUE(Payment_Reversed__c) , &quot;Stale Dated&quot;),
ISPICKVAL(PRIORVALUE(Payment_Reversed__c) , &quot;Payment posted to Incorrect account&quot;))),
AND(
OR(ISNULL( CreatedDate ),ISBLANK(CreatedDate )),
NOT(ISCHANGED(Payment_Reversed__c)),
OR(
ISPICKVAL(PRIORVALUE(Payment_Reversed__c) , &quot;NSF&quot;),
ISPICKVAL(PRIORVALUE(Payment_Reversed__c) , &quot;Stopped&quot;),
ISPICKVAL(PRIORVALUE(Payment_Reversed__c) , &quot;Unauthorised&quot;),
ISPICKVAL(PRIORVALUE(Payment_Reversed__c) , &quot;Stale Dated&quot;),
ISPICKVAL(PRIORVALUE(Payment_Reversed__c) , &quot;Payment posted to Incorrect account&quot;)))
)</errorConditionFormula>
    <errorDisplayField>Cheque_Payment_Reference_Number__c</errorDisplayField>
    <errorMessage>Once the Payment is reversed, it cannot be updated</errorMessage>
</ValidationRule>