force-app/main/default/objects/Insolvency_Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account_Number__c</columns>
    <columns>Bank_Name__c</columns>
    <columns>Cheque_Payment_Reference_Number__c</columns>
    <columns>NAME</columns>
    <columns>Payment_Amount__c</columns>
    <columns>Payment_Posting_Date__c</columns>
    <columns>Insolvency_Account__c</columns>
    <columns>Remittance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>Insolvency_CFG_BS</group>
        <group>Insolvency_CFG_Users</group>
        <group>Insolvency_SDA_Users</group>
        <group>Insolvency_SPL_Users</group>
        <group>Insolvency_Scotia_Users</group>
    </sharedTo>
</ListView>