force-app/main/default/objects/Insolvency_Payment__c/listViews/EFT_Insolvency_Payments.listView-meta.xml
<ListView>
    <fullName>EFT_Insolvency_Payments</fullName>
    <columns>NAME</columns>
    <columns>Account_Number__c</columns>
    <columns>Cheque_Payment_Reference_Number__c</columns>
    <columns>Insolvency_Account__c</columns>
    <columns>Payment_Amount__c</columns>
    <columns>Payment_Posting_Date__c</columns>
    <columns>Payment_Source_Formula__c</columns>
    <columns>Payment_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Created_by_EFT_Processing__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>EFT Insolvency Payments</label>
    <sharedTo>
        <group>Insolvency_CFG_Users</group>
    </sharedTo>
</ListView>